@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

class "TaskEntry" {
        -title
        -description
        -urgencyLevel
        -expectedDuration
        -state
        -greenSpace

}



class "AssignTaskToAgendaController" {
    - ToDoListRepository : toDoListRepository
    + AssignTaskToAgendaController(toDoListRepository,agendaRepository)
    + createTask(taskTitle, taskDuration, duration, urgency level)
    + add(task,date,time)
}

class "ToDoListRepository" {
    -entries
    + addTaskEntry(taskEntry: TaskEntry)
    + getTaskEntry(taskEntry: TaskEntry)
}
class "AgendaRepository"{
 + add(task,date,time)
}

class "AssignTaskToAgendaUI"{
}

class "Repositories" {
    + getInstance()
    + getToDoListRepository()
    +getAgendaRepository()
}

class "GreenSpaceController" {
    + getGreenSpaces()
}

class "Mapper" {
    + toDTO(greenSpaces)
    + toDomain(taskEntryDto)
}

class "GreenSpaceDTO" {
    + create(greenSpace)
}

class "TaskEntryDTO" {
    + create(title, description, urgencyLevel, expectedDuration, state, greenSpace)
}





AssignTaskToAgendaController ..> ToDoListRepository : toDoListRepository
AssignTaskToAgendaController ..> "AgendaRepository" : agendaRepository

AssignTaskToAgendaController ..> TaskEntry : task
TaskEntry ..> ToDoListRepository : exists in >
AssignTaskToAgendaUI ..> AssignTaskToAgendaController


AssignTaskToAgendaController ..> Repositories : repositories

GreenSpaceController ..> Repositories : repositories

Mapper ..> Repositories : repositories
GreenSpaceDTO ..> Repositories : repositories
TaskEntryDTO ..> Repositories : repositories

GreenSpaceController ..> GreenSpaceDTO : greenSpaceDTO
GreenSpaceDTO ..> GreenSpaceController : greenSpaceController

Mapper ..> GreenSpaceDTO : greenSpaceDTO
GreenSpaceDTO ..> Mapper : mapper

Mapper ..> TaskEntryDTO : TaskEntryDTO
TaskEntryDTO ..> Mapper : mapper

AssignTaskToAgendaController ..> TaskEntryDTO : TaskEntryDTO
TaskEntryDTO ..> AssignTaskToAgendaController : AssignTaskToAgendaController

@enduml